--- a/index.css
+++ b/index.css
@@ -1,65 +1,106 @@
+
 html {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body {
     font-family: Fira Code, Calibri, serif;
-    background-color: deepskyblue;
     margin: 0;
     padding: 0;
 }
 
-.container, header {
+.container {
     display: flex;
 }
 
-header {
-    justify-content: center;
-    align-items: center;
+/*  TITRES  */
+h1 {
     margin: 0;
     padding: 0;
-    border-bottom: black solid 2px;
+
+    font-family: BatmanForeverAlternate, Calibri, serif;
+    text-shadow: 3px 3px 2px black;
+    font-size: 1.8vw;
     text-align: center;
+    color: #6d8ebf;
+
+    transform: skew(30deg);
 }
 
-h1 {
-    font-size: 45px;
-    color: red;
-    margin: 0;
-    padding: 1% 0 1% 2%;
-    width: 100%;
-    /*border-left: black 2px solid;*/
-
+h2 {
+    padding: 0;
+    margin: 10px 10% 5px 10%;
+    border: black solid 2px;
+    height: 2.5%;
+    color: #0a9678;
 }
-
-h1 span {
-    font-family: curl, cursive, serif;
-}
-
 
 h3 {
     margin: 5px 0;
 }
 
-.logo {
-    float: left;
-    width: 8%;
-    height: 90px;
+/*  SCROLLBAR   */
+* {
+    /*Mozilla*/
+    scrollbar-color: #888 #f1f1f1;
+    /*IE*/
+    scrollbar-face-color: #888;
+    scrollbar-highlight-color: #f1f1f1;
 }
 
-img {
-    height: 100%;
+/*Chrome / Edge*/
+::-webkit-scrollbar {
+    width: 10px;
 }
 
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+/*  COLONNES    */
 .col-left {
     float: left;
-    width: 8%;
+    background-color: #fde6d9;
+    width: 16vw;
     height: 100%;
+    max-height: 100vh;
     text-align: center;
-    padding-top: 10px;
+    overflow-x: auto;
 }
 
+.col-right {
+    padding-left: 2%;
+    padding-top: 1.5%;
+    background: #9bcbde;
+    border-left: 2px solid black;
+
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    overflow-x: auto;
+}
+
+
+/*  IMAGES  */
+img {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+
+/*  PREVIEW */
 [type=radio] {
     position: absolute;
     opacity: 0;
@@ -67,30 +108,17 @@ img {
     height: 0;
 }
 
-/* IMAGE STYLES */
 .preview img {
     cursor: pointer;
     width: 90%;
+    margin-top: 10px;
 }
 
-/* CHECKED STYLES */
+/* CHECKED PREVIEW */
 .preview input:checked + img {
-    outline: 2px solid;
+    outline: 3px solid;
 }
 
-.preview input:hover + img {
-    transform: scale(2);
-    -moz-transform: scale(2);
-    margin-left: 60%;
-}
-
-.col-right {
-    padding-left: 2%;
-    padding-top: .5%;
-    background: moccasin;
-    border-left: 2px solid black;
-    width: 100%;
-}
 
 #CV-title {
     margin-left: auto;
@@ -99,26 +127,33 @@ img {
     width: 25%;
     padding: .75% 0;
     border: 2px solid;
+    border-radius: 10px 20px;
 
     transform: skew(-30deg);
 }
 
-#CV-title h2 {
-    margin: 0;
-    padding: 0;
 
-    font-family: BatmanForeverAlternate, Calibri, serif;
-    text-shadow: 3px 3px 2px black;
-    font-size: 1.8vw;
-    text-align: center;
-    color: lightgrey;
+/*  SKILLS  */
+.skill {
+    margin:  10px 0;
+}
 
-    transform: skew(30deg);
+.starSkill {
+    margin: 0 10px;
+}
+
+.rating {
+    cursor: default;
+}
+
+.hovered {
+    color: rgb(230, 230, 0);
 }
 
 .clicked {
-    color: yellow;
+    color: rgb(255, 255, 0);
 }
+
 
 #submitButton {
     display: block;
@@ -126,4 +161,16 @@ img {
 
     width: 250px;
     height: 50px;
+}
+
+
+#summary {
+    width: 500px;
+    height: 150px;
+    resize: none;
+}
+
+
+input {
+    outline: none;
 }
