--- a/index.css
+++ b/index.css
@@ -1,107 +1,78 @@
+:root {
+    --darkblue: #2C3E50;
+    --blue: #6b77aa;
+    --main_color: var(--blue);
+    --fg_background: #ceeaea;
+}
+
 
 html {
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 body {
-    font-family: Fira Code, Calibri, serif;
     margin: 0;
     padding: 0;
 }
 
-.container {
-    display: flex;
-}
-
-/*  TITRES  */
 h1 {
-    margin: 0;
-    padding: 0;
-
-    font-family: BatmanForeverAlternate, Calibri, serif;
-    text-shadow: 3px 3px 2px black;
-    font-size: 1.8vw;
-    text-align: center;
-    color: #6d8ebf;
-
-    transform: skew(30deg);
+    /*background-color: #fafafa;*/
 }
 
 h2 {
-    padding: 0;
-    margin: 10px 10% 5px 10%;
-    border: black solid 2px;
-    height: 2.5%;
-    color: #0a9678;
+    font-size: 2vw;
 }
 
 h3 {
-    margin: 5px 0;
+    margin-left: 1rem;
+    border-left: 6px solid var(--main_color);
+    padding-left: 1%;
+    font-weight: bold;
 }
 
-/*  SCROLLBAR   */
-* {
-    /*Mozilla*/
-    scrollbar-color: #888 #f1f1f1;
-    /*IE*/
-    scrollbar-face-color: #888;
-    scrollbar-highlight-color: #f1f1f1;
+
+.main {
+    background-color: var(--bs-gray-100);
+    padding: 2rem 2rem 1rem 2rem;
+    border-radius: 20px;
+    margin-bottom: 2rem
 }
 
-/*Chrome / Edge*/
-::-webkit-scrollbar {
-    width: 10px;
+@media (max-width: 1999px) {
+    .main {
+        width: 90%;
+    }
 }
 
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
+@media (min-width: 1200px) {
+    .main {
+        width: 60%;
+    }
 }
 
-::-webkit-scrollbar-thumb {
-    background: #888;
+
+.main-group {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: .7rem;
+    justify-content: center;
+}
+
+.form-group {
+    background-color: var(--fg_background);
+    padding: 7px;
     border-radius: 5px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
 
-/*  COLONNES    */
-.col-left {
-    float: left;
-    background-color: #fde6d9;
-    width: 16vw;
-    height: 100%;
-    max-height: 100vh;
-    text-align: center;
-    overflow-x: auto;
-}
-
-.col-right {
-    padding-left: 2%;
-    padding-top: 1.5%;
-    background: #9bcbde;
-    border-left: 2px solid black;
-
-    width: 100%;
-    height: 100%;
-    max-height: 100vh;
-    overflow-x: auto;
+#imagePreview {
+    height: 200px;
 }
 
 
-/*  IMAGES  */
-img {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
-
-/*  PREVIEW */
-[type=radio] {
+/* Template preview */
+.preview input[type=radio] {
     position: absolute;
     opacity: 0;
     width: 0;
@@ -114,63 +85,23 @@ img {
     margin-top: 10px;
 }
 
-/* CHECKED PREVIEW */
 .preview input:checked + img {
-    outline: 3px solid;
+    border-radius: 10px;
+    box-shadow: 0 0 0 .25rem var(--darkblue);
+
 }
 
 
-#CV-title {
-    margin-left: auto;
-    margin-right: auto;
-
-    width: 25%;
-    padding: .75% 0;
-    border: 2px solid;
-    border-radius: 10px 20px;
-
-    transform: skew(-30deg);
-}
-
-
-/*  SKILLS  */
-.skill {
-    margin:  10px 0;
-}
-
-.starSkill {
-    margin: 0 10px;
-}
-
-.rating {
-    cursor: default;
-}
-
+/*STARS*/
 .hovered {
-    color: rgb(230, 230, 0);
+    color: #F3E514;
 }
 
 .clicked {
-    color: rgb(255, 255, 0);
+    color: #cdc114;
 }
 
 
-#submitButton {
-    display: block;
-    margin: 3% auto;
-
-    width: 250px;
-    height: 50px;
-}
-
-
-#summary {
-    width: 500px;
-    height: 150px;
-    resize: none;
-}
-
-
-input {
-    outline: none;
+.required {
+    color: #c44133;
 }
