--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 :root {
     --darkblue: #2C3E50;
     --blue: #6b77aa;
-    --main_color: var(--blue);
+    --main_color: var(--darkblue);
     --fg_background: #ceeaea;
 }
 
@@ -18,6 +18,7 @@ body {
 
 h1 {
     /*background-color: #fafafa;*/
+    margin: 30px;
 }
 
 h2 {
